--- a/src/sass/views/gallery-view.scss
+++ b/src/sass/views/gallery-view.scss
@@ -1,12 +1,12 @@
+//
+//.main-section.gallery {
+//  padding-top: 60px;
+//  height: auto;
+//
+//  .card-row {
+//    overflow: visible;
+//    max-height: none;
+//  }
 
-.main-section.gallery {
-  padding-top: 60px;
-  height: auto;
-
-  .card-row {
-    overflow: visible;
-    max-height: none;
-  }
-
-
-}
+//
+//}
