--- a/src/sass/components/button.css
+++ b/src/sass/components/button.css
@@ -3,7 +3,7 @@ button {
   font-size: 1.2em;
   padding: 12px 24px;
   border: 2px solid white;
-  background-color: rgba(0, 0, 0, 0.1);
+  background: transparent;
   outline: none;
   cursor: pointer;
   margin: 5px;
@@ -11,7 +11,7 @@ button {
   button:hover {
     background: lightgray;
     color: #333;
-    border-color: #333; }
+    border-color: lightgrey; }
 
 .button-row {
   display: flex;
