--- a/src/sass/components/button.scss
+++ b/src/sass/components/button.scss
@@ -3,7 +3,8 @@ button {
   font-size: 1.2em;
   padding: 12px 24px;
   border: 2px solid white;
-  background-color: rgba(0,0,0,0.1);
+  //background-color: rgba(0,0,0,0.1);
+  background:transparent;
   outline: none;
   cursor: pointer;
   margin: 5px;
@@ -12,7 +13,7 @@ button {
   &:hover {
     background:lightgray;
     color: #333;
-    border-color: #333;
+    border-color: lightgrey;
   }
 
 }
