--- a/src/sass/components/menu.scss
+++ b/src/sass/components/menu.scss
@@ -10,7 +10,7 @@
   .fa {
 
     font-size: 2em;
-    color: lightgrey;
+    color: white;
     text-shadow: 1px 2px 2px #333;
     padding: 10px;
     cursor: pointer;
@@ -62,14 +62,15 @@
       cursor: pointer;
       transition: all 400ms;
       padding-bottom: 5px;
-      border-bottom: 1px solid white;
+      border-bottom: 3px solid white;
+      font-weight: bold;
 
       &:hover { color: lightgrey; border-color: lightgrey; }
     }
 
     .active-link {
       color: lightgrey;
-      border-bottom: 1px solid $blue !important;
+      border-color: $blue !important;
     }
 
   }
