--- a/src/sass/components/sections.scss
+++ b/src/sass/components/sections.scss
@@ -10,7 +10,7 @@
   &.cast { @include main-section("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg"); }
   &.packages { @include main-section("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg"); }
   &.book-party { @include main-section("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg"); }
-  &.contact { @include main-section("https://firebasestorage.googleapis.com/v0/b/brenda-website.appspot.com/o/19197575_10209781557711358_825897358_o.jpg?alt=media&token=e206a910-0b30-4b69-9847-0c8ef9aa935f"); }
+  &.contact { @include main-section(""); background: $orange-fade }
   &.gallery { @include main-section("http://wallpapercave.com/wp/3Qj8SxR.jpg"); }
   &.gallery-list { @include main-section("http://wallpapercave.com/wp/3Qj8SxR.jpg"); height: auto }
 
@@ -57,7 +57,20 @@
   background: $blue;
   color: white;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   height: 50vh;
+
+  .footer-content {
+    text-align: right;
+    padding-right: 10px;
+
+    p { text-align: right }
+
+  }
+
+  .social-media-bar {
+
+  }
+
 }
