--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -123,18 +123,20 @@ p {
   height: 10vh !important; }
 
 .main-section.home {
+  background: url("https://firebasestorage.googleapis.com/v0/b/brenda-website.appspot.com/o/19197575_10209781557711358_825897358_o.jpg?alt=media&token=e206a910-0b30-4b69-9847-0c8ef9aa935f");
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("https://firebasestorage.googleapis.com/v0/b/brenda-website.appspot.com/o/19197575_10209781557711358_825897358_o.jpg?alt=media&token=e206a910-0b30-4b69-9847-0c8ef9aa935f");
-  background-color: rgba(0, 0, 0, 0.4);
+  background: "";
   background-blend-mode: multiply;
   background-size: cover;
   background-position: center center;
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.4);
+  background-blend-mode: multiply; }
 
 .main-section.characters {
   height: 100vh;
@@ -142,8 +144,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
-  background-color: rgba(0, 0, 0, 0.4);
+  background: linear-gradient(180deg, #f46d4c, #e4505d);
   background-blend-mode: multiply;
   background-size: cover;
   background-position: center center;
@@ -156,8 +157,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
-  background-color: rgba(0, 0, 0, 0.4);
+  background: linear-gradient(180deg, #f46d4c, #e4505d);
   background-blend-mode: multiply;
   background-size: cover;
   background-position: center center;
@@ -170,8 +170,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
-  background-color: rgba(0, 0, 0, 0.4);
+  background: linear-gradient(180deg, #f46d4c, #e4505d);
   background-blend-mode: multiply;
   background-size: cover;
   background-position: center center;
@@ -184,8 +183,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("https://static.pexels.com/photos/1780/landscape-nature-clouds-cloudy.jpg");
-  background-color: rgba(0, 0, 0, 0.4);
+  background: linear-gradient(180deg, #f46d4c, #e4505d);
   background-blend-mode: multiply;
   background-size: cover;
   background-position: center center;
@@ -198,14 +196,12 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("");
-  background-color: rgba(0, 0, 0, 0.4);
+  background: linear-gradient(180deg, #f46d4c, #e4505d);
   background-blend-mode: multiply;
   background-size: cover;
   background-position: center center;
   overflow: hidden;
-  position: relative;
-  background: linear-gradient(180deg, #f46d4c, #e4505d); }
+  position: relative; }
 
 .main-section.gallery {
   height: 100vh;
@@ -213,8 +209,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("http://wallpapercave.com/wp/3Qj8SxR.jpg");
-  background-color: rgba(0, 0, 0, 0.4);
+  background: linear-gradient(180deg, #f46d4c, #e4505d);
   background-blend-mode: multiply;
   background-size: cover;
   background-position: center center;
@@ -227,8 +222,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url("http://wallpapercave.com/wp/3Qj8SxR.jpg");
-  background-color: rgba(0, 0, 0, 0.4);
+  background: linear-gradient(180deg, #f46d4c, #e4505d);
   background-blend-mode: multiply;
   background-size: cover;
   background-position: center center;
@@ -236,13 +230,27 @@ p {
   position: relative;
   height: auto; }
 
-.content-section .content-body {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 10px 30px; }
+.content-section {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(180deg, #378aff, #524fff);
+  background-blend-mode: multiply;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+  position: relative;
+  align-items: flex-end;
+  overflow: visible; }
+  .content-section .content-body {
+    float: right;
+    width: 70%;
+    padding: 10px 30px; }
 
 .footer-section {
-  background: #524fff;
+  background: linear-gradient(180deg, #378aff, #524fff);
   color: white;
   display: flex;
   justify-content: flex-end;
@@ -405,6 +413,22 @@ button {
     border-bottom: 2px solid white;
     color: white;
     font: 18px Roboto; }
+
+.positioned-image {
+  position: absolute;
+  width: 30%;
+  min-width: 450px; }
+  .positioned-image.left {
+    bottom: -100px;
+    left: -30px;
+    box-shadow: 10px 10px 1px #333; }
+  .positioned-image.right {
+    bottom: -70px;
+    right: 0;
+    box-shadow: -10px 8px 1px #333; }
+  .positioned-image.half-size {
+    width: 25%;
+    min-width: 250px; }
 
 .main-section.contact .card {
   border: none;
