--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -18,6 +18,7 @@
 @import "components/character-card.scss";
 @import "components/card.scss";
 @import "components/_input.scss";
+@import "components/_image.scss";
 
 // =======================
 // Views
