--- a/src/sass/helpers/_mixins.scss
+++ b/src/sass/helpers/_mixins.scss
@@ -6,8 +6,8 @@
   justify-content: center;
   align-items: center;
 
-  background-image: url($image);
-  background-color: rgba(0,0,0,0.4);
+  background: $image;
+  //background-color: rgba(0,0,0,0.4);
   background-blend-mode: multiply;
 
   background-size: cover;
